hotfix(style): fix text overflow on profile section
Some CSS classes were fixed to limit text from profile section. Title and Subtile are now limited with max-width. Media query from .profile and .button_add needed to be changed to make transiton smooth.

--- a/src/blocks/button/_add/button_add.css
+++ b/src/blocks/button/_add/button_add.css
@@ -11,7 +11,7 @@
   opacity: 0.6;
 }
 
-@media screen and (max-width: 722px) {
+@media screen and (max-width: 770px) {
   .button_add {
     width: 50%;
   }
