--- a/src/blocks/button/_edit/button_edit.css
+++ b/src/blocks/button/_edit/button_edit.css
@@ -1,6 +1,6 @@
 .button_edit {
   cursor: pointer;
-  width: 1.5rem;
+  min-width: 1.5rem;
   height: 1.5rem;
   display: flex;
   justify-content: center;
