--- a/src/blocks/profile/__description/profile__description.css
+++ b/src/blocks/profile/__description/profile__description.css
@@ -1,6 +1,7 @@
 .profile__description {
   margin: 0;
   padding: 0;
+  max-width: 25.9375rem;
   list-style: none;
   display: flex;
   flex-direction: column;
