--- a/src/blocks/profile/__fig/profile__fig.css
+++ b/src/blocks/profile/__fig/profile__fig.css
@@ -3,5 +3,5 @@
   border-radius: 50%;
   overflow: hidden;
   max-width: 7.5rem;
-  height: 7.5rem;
+  max-height: 7.5rem;
 }
