--- a/src/blocks/profile/__title/profile__title.css
+++ b/src/blocks/profile/__title/profile__title.css
@@ -2,4 +2,5 @@
   font-size: clamp(1.375rem, 5vw, 2.625rem);
   font-weight: 500;
   margin: 0;
+  max-width: 23.3125rem;
 }
