--- a/src/blocks/profile/profile.css
+++ b/src/blocks/profile/profile.css
@@ -5,7 +5,7 @@
   flex-wrap: wrap;
 }
 
-@media screen and (max-width: 722px) {
+@media screen and (max-width: 770px) {
   .profile {
     flex-direction: column;
     gap: 1.875rem;
